package baseNoStates.firstmilestone;

import baseNoStates.requests.RequestReader;
import org.json.JSONObject;

/**
 * Representa una porta del edifici. Mante el seu id, estat logic (DoorState)
 * i si esta fisicament tancada.
 */
public class Door {
  private final String id;
  private boolean closed; // physically
  private DoorState state; // logically

  public Door(String id) {
    this.id = id;
    closed = true;
    state = new DoorUnlocked(this);
  }

  public void processRequest(RequestReader request) {
    // it is the Door that process the request because the door has and knows
    // its state, and if closed or open
    if (request.isAuthorized()) {
      String action = request.getAction();
      doAction(action);
    } else {
      // No autorizado: se registra para depuración.
      System.out.println("not authorized");
    }
    request.setDoorStateName(getStateName());
  }

  private void doAction(String action) {
    switch (action) {
      case Actions.OPEN:
        state.open();
        break;
      case Actions.CLOSE:
        state.close();
        break;
      case Actions.LOCK:
        state.lock();
        break;
      case Actions.UNLOCK:
        state.unlock();
        break;
      case Actions.UNLOCK_SHORTLY:
        state.unlockShortly();
        break;
      default:
        assert false : "Unknown action " + action;
        System.exit(-1);
    }
  }

  public boolean isClosed() {
    return closed;
  }

  public void setClosed(boolean close) {
    closed = close;
  }

  public String getId() {
    return id;
  }

  public String getStateName() {
    return state.toString();
  }

  public DoorState getState() {
    return state;
  }

  public void setState(DoorState state) {
    this.state = state;
  }

  @Override
  public String toString() {
    return "Door{"
        + ", id='" + id + '\''
        + ", closed=" + closed
        + ", state=" + getStateName()
        + "}";
  }

  public JSONObject toJson() {
    JSONObject json = new JSONObject();
    json.put("id", id);
    json.put("state", getStateName());
    json.put("closed", closed);
    return json;
  }
}